[package]
name = "lpm-workflows"
version = "0.0.0"
edition = "2024"
license.workspace = true
repository.workspace = true
publish = false

[features]
swift-tests = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["json"] }
tempfile = "3"
serde_json = { workspace = true }
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
lpm-vault = { path = "../../crates/lpm-vault" }
lpm-lockfile = { path = "../../crates/lpm-lockfile" }
tar = { workspace = true }
flate2 = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
scrypt = { workspace = true }
sha2 = "0.10"
p256 = { workspace = true }
